<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.puc.iic3380.mg4.activities.NavigationActivity">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_create_meme"
        android:icon="@drawable/ic_format_shapes_black_24dp"
        android:title="@string/action_create_meme"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_send_file"
        android:icon="@drawable/ic_attach_file_black_24dp"
        android:title="@string/send_file"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />



</menu>